--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -56,6 +56,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="load_genlab_data">
+        <property name="text">
+         <string>load GenLab data</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -148,6 +155,9 @@
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
        <column>
         <property name="text">
          <string>CM ID</string>
@@ -201,6 +211,11 @@
        <column>
         <property name="text">
          <string>consent</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>GenLab</string>
         </property>
        </column>
        <column>
