src/GSvar/ExpressionGeneWidget.*: added new gender filter in UI
src/cppNGSD/NGSD.*: added support for new gender filter

src/cppNGSD-TEST/NGSD_Test.h: added additional tests

--- a/src/GSvar/ExpressionGeneWidget.ui
+++ b/src/GSvar/ExpressionGeneWidget.ui
@@ -182,13 +182,56 @@
              </item>
             </layout>
            </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QLabel" name="l_filter_by_gender">
+               <property name="text">
+                <string>include genders: </string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QComboBox" name="cb_filter_by_gender">
+               <item>
+                <property name="text">
+                 <string>all</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>male</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>female</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_3">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
           </layout>
          </widget>
         </item>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="l_sample_quality">
             <property name="text">
              <string>Quality filter:</string>
             </property>
