--- a/src/GSvar/MaintenanceDialog.ui
+++ b/src/GSvar/MaintenanceDialog.ui
@@ -114,6 +114,11 @@
      </item>
      <item>
       <property name="text">
+       <string>Add missing gender for RNA samples</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>[GenLab]</string>
       </property>
      </item>
