--- a/src/GSvar/VariantWidget.ui
+++ b/src/GSvar/VariantWidget.ui
@@ -704,6 +704,11 @@
         </column>
         <column>
          <property name="text">
+          <string>ancestry</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
           <string>quality</string>
          </property>
          <property name="toolTip">
