--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -49,13 +49,76 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QPushButton" name="check_xml">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Check XML fields in MVH cases are valid&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
+       <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>check_xml</string>
+         <string>status:</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="f_status">
+        <item>
+         <property name="text">
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Keine Angabe</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Rekrutiert</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Aktiv</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Abgebrochen</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Abgeschlossen</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>network:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="f_network">
+        <property name="minimumSize">
+         <size>
+          <width>250</width>
+          <height>0</height>
+         </size>
+        </property>
+        <item>
+         <property name="text">
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Netzwerk Seltene Erkrankungen</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Deutsches Netzwerk für Personalisierte Medizin</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
@@ -66,6 +129,32 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="check_xml">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Check XML fields in MVH cases are valid&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>check_xml</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>10</width>
           <height>20</height>
          </size>
         </property>
@@ -109,38 +198,6 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>network:</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="f_network">
-        <property name="minimumSize">
-         <size>
-          <width>250</width>
-          <height>0</height>
-         </size>
-        </property>
-        <item>
-         <property name="text">
-          <string/>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Netzwerk Seltene Erkrankungen</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Deutsches Netzwerk für Personalisierte Medizin</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item>
        <widget class="QCheckBox" name="f_messages">
         <property name="text">
          <string>with message(s)</string>
@@ -166,7 +223,7 @@
       <item>
        <widget class="QCheckBox" name="f_ready_export">
         <property name="text">
-         <string>ready for GRZ/KDK export (load consent data first)</string>
+         <string>ready for GRZ/KDK export</string>
         </property>
        </widget>
       </item>
