--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -345,6 +345,11 @@
        </column>
        <column>
         <property name="text">
+         <string>consent version [SE]</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
          <string>consent</string>
         </property>
        </column>
