--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -87,6 +87,11 @@
           <string>Abgeschlossen</string>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>Follow-Up</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item>
@@ -378,7 +383,31 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionReloadData"/>
+   </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuHelp"/>
   </widget>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionReloadData">
+   <property name="text">
+    <string>Reload data</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
