MVHub: added column with BfArM reply for export

--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -368,6 +368,11 @@
          <string>export status</string>
         </property>
        </column>
+       <column>
+        <property name="text">
+         <string>export confirmation</string>
+        </property>
+       </column>
       </widget>
       <widget class="QPlainTextEdit" name="output"/>
      </widget>
