MVHub: added batch export and export status filter

--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -127,6 +127,37 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>export status:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="f_export">
+        <item>
+         <property name="text">
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>pending</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>in progress</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>done</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer_2">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
