src/GSvar/ProcessedSampleDataDeletionDialog.*: added option to delete QC data

--- a/src/GSvar/ProcessedSampleDataDeletionDialog.ui
+++ b/src/GSvar/ProcessedSampleDataDeletionDialog.ui
@@ -113,14 +113,14 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="0">
+     <item row="13" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Sample:</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="1">
+     <item row="13" column="1">
       <widget class="QCheckBox" name="processed_sample">
        <property name="text">
         <string>Processed sample (works only if all associated data is deleted)</string>
@@ -184,6 +184,20 @@
        </property>
        <property name="text">
         <string>REs</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1">
+      <widget class="QCheckBox" name="qc_data">
+       <property name="text">
+        <string>QC data</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>other:</string>
        </property>
       </widget>
      </item>
