Added BamInfo tool; GSvar: added BAM info to analysis status dialog tooltip of BAM

--- a/src/GSvar/AnalysisInformationWidget.ui
+++ b/src/GSvar/AnalysisInformationWidget.ui
@@ -69,17 +69,17 @@
       <string>Details:</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
     <widget class="QTableWidget" name="table">
      <property name="contextMenuPolicy">
-      <enum>Qt::ActionsContextMenu</enum>
+      <enum>Qt::ContextMenuPolicy::ActionsContextMenu</enum>
      </property>
      <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectRows</enum>
+      <enum>QAbstractItemView::SelectionBehavior::SelectRows</enum>
      </property>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
@@ -106,7 +106,7 @@
      </column>
      <column>
       <property name="text">
-       <string>caller</string>
+       <string>mapper/caller</string>
       </property>
      </column>
     </widget>
