--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -132,6 +132,32 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>messages:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="f_messages">
+        <item>
+         <property name="text">
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>none</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>exist</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>export status:</string>
@@ -160,6 +186,29 @@
           <string>done</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="f_ready_export">
+        <property name="text">
+         <string>ready for GRZ/KDK export</string>
+        </property>
        </widget>
       </item>
       <item>
@@ -239,32 +288,22 @@
        </widget>
       </item>
       <item>
-       <widget class="QCheckBox" name="f_messages">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>with message(s)</string>
+         <string>exclude PS:</string>
         </property>
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+       <widget class="QLineEdit" name="f_exclude_ps">
+        <property name="maximumSize">
          <size>
-          <width>40</width>
-          <height>20</height>
+          <width>250</width>
+          <height>16777215</height>
          </size>
         </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QCheckBox" name="f_ready_export">
         <property name="text">
-         <string>ready for GRZ/KDK export</string>
+         <string>DNA2504923A1_01 DNA2505055A1_01 DNA2505117A1_01 DNA2505855A1_01 DNA2505963A1_01 DNA2506588A1_01 DNA2507314A1_01 DNA2507690A1_01 DNA2505089A1_01 DNA2505454A1_01 DNA2505456A1_01 DNA2505669A1_01 DNA2506007A1_01 DNA2506016A1_01 DNA2506245A1_01 DNA2506249A1_01 DNA2506367A1_01 DNA2506370A1_01 DNA2506672A1_01 DNA2506793A1_01 DNA2506900A1_01 DNA2506903A1_01 DNA2507037A1_01 DNA2507045A1_01 DNA2507047A1_01 DNA2507049A1_01 DNA2507153A1_01 DNA2507336A1_01 DNA2507338A1_01 DNA2507340A1_01 DNA2507838A1_02 DNA2507849A1_02 DNA2507861A1_02 DNA2508337A1_01 DNA2401731A1_01 DNA2505074A4_01 DNA2301102A1_01 DNA2300247A1_01 DNA2503807A1_01 DNA2501802A1_01 DNA2310028A1_01 DNA2504124A1_01 DNA2504549A1_01 DNA2503393A1_01 DNA2505009A1_01 DNA2504240A1_01 DNA2504547A1_01 DNA2509268A1_01 DNA2508757A1_01 DNA2509012A1_01 DNA2509535A1_01 DNA2502191A1_01 DNA2500610A1_01 DNA2504120A1_01 DNA2508537A1_01 DNA2500993A1_01 DNA2509411A1_01 DNA2508352A1_01 DNA2508749A1_01 DNA2507349A1_01 DNA2504127A1_01 DNA2508755A1_01 DNA2504567A1_01 DNA2508539A1_01 DNA2509138A1_01</string>
         </property>
        </widget>
       </item>
