--- a/src/GSvar/FilterWidgetSV.ui
+++ b/src/GSvar/FilterWidgetSV.ui
@@ -145,7 +145,7 @@
       <item row="3" column="0">
        <widget class="QComboBox" name="roi">
         <property name="contextMenuPolicy">
-         <enum>Qt::ActionsContextMenu</enum>
+         <enum>Qt::CustomContextMenu</enum>
         </property>
         <property name="maxVisibleItems">
          <number>30</number>
