--- a/src/GSvar/SvSearchWidget.ui
+++ b/src/GSvar/SvSearchWidget.ui
@@ -126,6 +126,45 @@
         <property name="spacing">
          <number>3</number>
         </property>
+        <item row="0" column="4">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::MinimumExpanding</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>30</width>
+            <height>10</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="3" column="0">
+         <widget class="QRadioButton" name="rb_breakpoint">
+          <property name="text">
+           <string>search by breakpoint:</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLineEdit" name="coordinates2">
+          <property name="minimumSize">
+           <size>
+            <width>200</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="placeholderText">
+           <string>Pos2: chr:start-end</string>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
          <widget class="QRadioButton" name="rb_single_sv">
           <property name="text">
@@ -137,6 +176,19 @@
           <attribute name="buttonGroup">
            <string notr="true">buttonGroup</string>
           </attribute>
+         </widget>
+        </item>
+        <item row="2" column="1" colspan="3">
+         <widget class="QLineEdit" name="le_genes">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="toolTip">
+           <string>Uses the gene locus extended by 5000 bases as region.</string>
+          </property>
+          <property name="placeholderText">
+           <string>Gene names</string>
+          </property>
          </widget>
         </item>
         <item row="2" column="0">
@@ -198,35 +250,6 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
-         <widget class="QLineEdit" name="coordinates2">
-          <property name="minimumSize">
-           <size>
-            <width>200</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="placeholderText">
-           <string>Pos2: chr:start-end</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="4">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::MinimumExpanding</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>30</width>
-            <height>10</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
         <item row="1" column="1" colspan="3">
          <widget class="QLineEdit" name="le_region">
           <property name="enabled">
@@ -237,16 +260,13 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1" colspan="3">
-         <widget class="QLineEdit" name="le_genes">
+        <item row="3" column="1" colspan="3">
+         <widget class="QLineEdit" name="le_breakpoint">
           <property name="enabled">
            <bool>false</bool>
           </property>
-          <property name="toolTip">
-           <string>Uses the gene locus extended by 5000 bases as region.</string>
-          </property>
           <property name="placeholderText">
-           <string>Gene names</string>
+           <string>chr:start-end</string>
           </property>
          </widget>
         </item>
