--- a/src/GSvar/SettingsDialog.ui
+++ b/src/GSvar/SettingsDialog.ui
@@ -139,7 +139,7 @@
    <item row="2" column="2">
     <widget class="QStackedWidget" name="stack">
      <property name="currentIndex">
-      <number>3</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="page_general">
       <layout class="QFormLayout" name="formLayout">
@@ -356,7 +356,7 @@
        <property name="bottomMargin">
         <number>3</number>
        </property>
-       <item row="0" column="0" colspan="2">
+       <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_processedSampleTab">
          <property name="title">
           <string>Processed Sample Tab</string>
@@ -405,6 +405,52 @@
             <item>
              <property name="text">
               <string>use ',' as thousands separator</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_processedSampleTab_2">
+         <property name="title">
+          <string>General view settings</string>
+         </property>
+         <property name="flat">
+          <bool>true</bool>
+         </property>
+         <layout class="QFormLayout" name="formLayout_7">
+          <property name="horizontalSpacing">
+           <number>3</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>3</number>
+          </property>
+          <property name="leftMargin">
+           <number>3</number>
+          </property>
+          <property name="topMargin">
+           <number>3</number>
+          </property>
+          <property name="rightMargin">
+           <number>3</number>
+          </property>
+          <property name="bottomMargin">
+           <number>3</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Windows style:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="style">
+            <item>
+             <property name="text">
+              <string>[default]</string>
              </property>
             </item>
            </widget>
