trying to fix stange splitter behaviour in Qt6

--- a/src/GSvar/FilterWidgetSV.ui
+++ b/src/GSvar/FilterWidgetSV.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>350</width>
-    <height>574</height>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
