--- a/src/GSvar/SvWidget.ui
+++ b/src/GSvar/SvWidget.ui
@@ -409,7 +409,7 @@
      </widget>
      <widget class="FilterWidgetSV" name="filter_widget" native="true">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
