--- a/src/GSvar/CnvWidget.ui
+++ b/src/GSvar/CnvWidget.ui
@@ -386,7 +386,7 @@
      </widget>
      <widget class="FilterWidgetCNV" name="filter_widget" native="true">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
