--- a/src/MVHub/MVHub.ui
+++ b/src/MVHub/MVHub.ui
@@ -265,6 +265,26 @@
        <number>3</number>
       </property>
       <item>
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>CM ID:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="f_cmid">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>text filter:</string>
